app/assets/stylesheets/_site.scss
/* ... */
.feeds-toolbar {
	height: 52px;
	border-top: 1px solid #DDDDDD;
	position: absolute;
	bottom: 0;
	left: 0;
	right: 0;
	font-size: 10px;
	background-color: #F2F3F4;
	table {
		margin-top: 8px;
		width: 100%;
	}
	td {
		width: 33%;
		text-align: center;
		vertical-align: middle;
	}
	@media (min-width: 421px) {
		.entries-column & {
			display: none;
		}
	}
	@media (max-width: 420px) {
		.feeds-column & {
			display: none;
		}
	}
}

.subscribe-wrap {
	z-index: 0;
	padding: 8px;
	position: absolute;
	top: 37px;
	border-bottom: 1px solid #DDDDDD;
	width: 100%;
	background-color: #e6e7e8;
	input {
		height: 32px;
		width: 100%;
		max-width: 100%;
		margin-bottom: 0;
		padding: 5px 25px 5px 5px;
		font-size: 14px;
	}
	&:before {
		position: absolute;
		top: -1px;
		left: 12px;
		border-right: 6px solid rgba(0, 0, 0, 0);
		border-top: 6px solid #CCCCCC;
		border-left: 6px solid rgba(0, 0, 0, 0);
		border-bottom-color: rgba(0, 0, 0, 1);
		content: '';
		display: none;
	}
	&:after {
		position: absolute;
		top: -1px;
		left: 13px;
		border-right: 5px solid rgba(0, 0, 0, 0);
		border-top: 5px solid $list-background;
		border-left: 5px solid rgba(0, 0, 0, 0);
		content: '';
		display: none;
	}
	&.open:after, &.open:before {
		display: inline-block;
	}
}

.feeds {
	background-color: $list-background;
	position: absolute;
	bottom: 52px;
	left: 0;
	right: 0;
	overflow-y: auto;
	overflow-x: hidden;
	-webkit-overflow-scrolling: touch;
	top: 37px;
	transition: top .2s ease;
	&.show-subscribe {
		top: 86px;
	}
	@media (max-width: 420px) {
		bottom: 0;
	}
	ul {
		margin: 0;
		padding: 0;
		list-style: none;
		li {
			padding: 0;
			margin: 0;
			position: relative;
			z-index: 0;
			a {
				text-decoration: none;
			}
			.feed-link {
				font-size: 13px;
				color: #333;
				overflow: hidden;
				text-overflow: ellipsis;
				white-space: nowrap;
				width: 100%;
				padding: 9px 40px 8px 35px;
				display: block;
				line-height: 1;
				&:hover {
					text-decoration: none;
				}
			}
			.tag-link {
				padding-right: 70px;
			}
			.count {
				font-size: 12px;
				color: #999999;
				position: absolute;
				right: 10px;
				top: 10px;
			}
			.toggle-drawer {
				padding: 0;
				margin: 0;
			}
			&.selected {
				> a .count {
					color: rgba(255,255,255,.7);
				}
				.feed-action-button {
					color: rgba(255,255,255,.9);
				}
			}
		}
	}
	.drawer {
		position: relative;
		background: #E6E7E8;
		overflow: hidden;
		ul {
			overflow: hidden;
			border-top: 1px solid #DDDDDD;
			border-bottom: 1px solid #DDDDDD;
			padding: 0;
		}
		.drawer-arrow:before {
			position: absolute;
			top: 0;
			left: 32px;
			display: inline-block;
			border-right: 6px solid rgba(0, 0, 0, 0);
			border-top: 6px solid #CCCCCC;
			border-left: 6px solid rgba(0, 0, 0, 0);
			border-bottom-color: rgba(0, 0, 0, 1);
			content: '';
		}
		.drawer-arrow:after {
			position: absolute;
			top: 0;
			left: 33px;
			display: inline-block;
			border-right: 5px solid rgba(0, 0, 0, 0);
			border-top: 5px solid $list-background;
			border-left: 5px solid rgba(0, 0, 0, 0);
			content: '';
		}
	}
}

.feed-action-button {
	position: absolute;
	right: 45px;
	top: 0;
	font-weight: bold;
	color: #DDDDDD;
	font-size: 11px;
	display: block;
	-webkit-appearance: none;
	background: none;
	border: none;
	padding: 7px 3px 5px 3px;
	margin: 0;
	display: block;
	&:hover {
		color: #999;
	}
}

.feeds .selected > a {
	background: #666666;
	color: #fff !important;
}

.selected .feeds .selected > a {
	background: $selected;
}

li.selected .drawer .drawer-arrow:after {
	border-top-color: #666;
}

.selected li.selected .drawer .drawer-arrow:after {
	border-top-color: $selected;
}

.favicon-wrap {
	border-radius: 2px;
	z-index: 0;
	padding: 2px;
	display: block;
	height: 20px;
	width: 20px;
	position: absolute;
	left: 8px;
	top: 5px;
	.favicon {
		height: 16px;
		width: 16px;
		display: block;
		background-size: 16px 16px;
	}
}

li.selected > a .favicon-wrap {
	background-color: #FFF;
}

.favicon {
	background-repeat: no-repeat;
	background: image-url("favicon-feed.svg") 0 0 no-repeat;
}

.favicon-tag {
	background-size: 16px 16px;
	background-repeat: no-repeat;
	background-image: image-url("favicon-tag.svg");
}

.favicon-unread {
	background-size: 16px 16px;
	background-repeat: no-repeat;
	background-image: image-url("favicon-unread.svg");
}

.favicon-all {
	background-size: 16px 16px;
	background-repeat: no-repeat;
	background-image: image-url("favicon-all.svg");
}

.favicon-star {
	background-size: 16px 16px;
	background-repeat: no-repeat;
	background-image: image-url("favicon-star.svg");
}

.favicon-search {
	background-size: 16px 16px;
	background-repeat: no-repeat;
	background-image: image-url("favicon-search.svg");
}

.favicon-recently-read {
	background-size: 16px 16px;
	background-repeat: no-repeat;
	background-image: image-url("favicon-recently-read.svg");
}

.favicon-progress {
	background-image: image-url("favicon-progress.gif") !important;
}

.back-button {
	background-color: transparent;
	background-size: 11px 18px;
	background-repeat: no-repeat;
	background-image: image-url("icon-left-arrow.svg");
	background-position: center center;
	display: block;
	-webkit-appearance: none;
	border: none;
	height: 16px;
	width: 11px;
	padding: 0;
}

.entries-wrap {
	position: relative;
	border-right: 1px solid $list-border;
	@media (max-width: 768px) {
		.feed-selected &, .nothing-selected & {
			border-right-style: none;
		}
	}
}

.entries-header {
	color: #999;
	display: none;
	border-bottom: 1px solid #DDDDDD;
	line-height: 37px;
	height: 37px;
	text-align: center;
	overflow: auto;
	padding-right: 45px;
	> * {
		display: inline-block;
	}
	.back-button {
		float: left;
		height: 36px;
		width: 36px;
	}
	.favicon-wrap {
		position: static;
	}
	.favicon {
		margin-top: 4px;
	}
	@media (max-width: 420px) {
		.feed-selected & {
			display: block;
		}
	}
	@media (max-width: 768px) and (min-width: 621px) {
		.entry-selected & {
			display: block;
		}
	}
}
/* ... */

